# cmake-optimize-architecture-flag

./: .gitignore  .travis.yml  CMakeLists.txt  Copyright.txt  OptimizeArchitectureFlags.cmake  README.md  appveyor.yml
Modules/: AddCompilerFlag.cmake  CMakeCompilerMachineOption.cmake  CMakeHostSystemInformationExtra.cmake  DetectCPUMicroArchitecture.cmake  GetCPUSIMDFeatures.cmake  GetMarchCompilerOptions.cmake  OptimizeArchitectureFlag.cmake  OptimizeArchitectureFlags.cmake
Modules/CMakeCompilerMachineOption/: ArmCompilerOptions.cmake  X64CompilerOptions.cmake
Modules/CMakeHostSystemInformationExtra/: CheckCPUFeature.cmake  DetectArmMicroArchitecture.cmake  DetectX64MicroArchitecture.cmake  gcc_cpufeatures.c  gcc_cpuinfo.c  win32_cpufeatures.c  win32_cpuinfo.c
Modules/DetectCPUMicroArchitecture/: DetectX64MicroArchitecture.cmake
Modules/GetCPUSIMDFeatures/: GetX64SIMDFeatures.cmake
Modules/GetMarchCompilerOptions/: GetArmMarchCompilerOptions.cmake  GetX64MarchCompilerOptions.cmake
Tests/: CMakeLists.txt
Tests/CMakeCompilerMachineOption/: CMakeLists.txt
Tests/CMakeHostSystemInformationExtra/: CMakeLists.txt
Tests/CMakeHostSystemInformationExtra/arm/: CMakeLists.txt
Tests/arm/: CMakeLists.txt
Tests/x86_64/: CMakeLists.txt
example-project/: CMakeLists.txt
